seamless/tests/api_error_compile_tests/01_basic.stderr
error: One of '#[api_error(internal)]' or '#[api_error(external)]' or '#[api_error(external = "foo")]' is required (1)
 --> $DIR/01_basic.rs:4:8
  |
4 | struct Foo {
  |        ^^^
