seamless/tests/api_error_compile_tests/01_basic.rs
// FAIL: attrs that we need weren't provided.

#[derive(seamless::ApiError)]
struct Foo {
    error: String
}

fn main() { }
